--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/bc92585769.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Weather app</title>
 </head>
 <body>
-
+    <div class="container">
+        <h1>
+            Phoenix
+        </h1>
+        <ul>
+            <li>
+                Friday 05:00
+            </li>
+            <li>
+                Clear
+            </li>
+        </ul>
+        <div class="row">
+            <div class="col-6">
+                <i class="far fa-sun"></i>
+                90°F | °C
+            </div>
+            <div class="col-6">
+                <ul>
+                    <li>
+                        <i class="fas fa-umbrella"></i>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        <i class="fas fa-hand-holding-water"></i>
+                        Humidity: 11%
+                    </li>
+                    <li>
+                        <i class="fas fa-wind"></i>
+                        Wind: 3 mph
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <small>
+        <a href="https://github.com/sjjcindy/Weather-app2.0" target="blank"> Open-source code </a>
+        by Cynthia Rodriguez 
+    </small>
 <script src="src/app.js"></script>
 </body>
 </html>
