--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/bc92585769.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500&family=Knewave&family=Permanent+Marker&family=Saira+Extra+Condensed:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Weather app</title>
 </head>
 <body>
     <div class="container">
+        <div class="weather-app">
         <h1>
-            Phoenix
+            Todays Forcast 
+            <i class="fas fa-cloud-sun-rain"></i>
         </h1>
+        <h2>
+            Phoenix
+        </h2>
         <ul>
             <li>
                 Friday 05:00
@@ -24,7 +31,7 @@
         </ul>
         <div class="row">
             <div class="col-6">
-                <i class="far fa-sun"></i>
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" />
                 90°F | °C
             </div>
             <div class="col-6">
@@ -49,6 +56,7 @@
         <a href="https://github.com/sjjcindy/Weather-app2.0" target="blank"> Open-source code </a>
         by Cynthia Rodriguez 
     </small>
+</div>
 <script src="src/app.js"></script>
 </body>
 </html>
