--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="weather-app">
-        <h1>
+        <div class="weather-app-wrapper">
+            <div class="weather-app">
+                <div class="overview">
+       <h1>
             Todays Forcast 
             <i class="fas fa-cloud-sun-rain"></i>
         </h1>
@@ -29,11 +31,20 @@
                 Clear
             </li>
         </ul>
+        </div>
         <div class="row">
             <div class="col-6">
-                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" />
-                90°F | °C
-            </div>
+                <div class="clearfix weather-temperature">
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+                    alt="clear"
+                    class="float-left"
+                    />
+                    <div class="float-left">
+                       <strong> 90 </strong><span class="units">°F | °C
+                       </span>  
+                </div>
+             </div>
+        </div>
             <div class="col-6">
                 <ul>
                     <li>
@@ -52,10 +63,11 @@
             </div>
         </div>
     </div>
-    <small>
-        <a href="https://github.com/sjjcindy/Weather-app2.0" target="blank"> Open-source code </a>
+        <small>
+            <a href="https://github.com/sjjcindy/Weather-app2.0" target="blank"> Open-source code </a>
         by Cynthia Rodriguez 
-    </small>
+        </small>
+    </div>
 </div>
 <script src="src/app.js"></script>
 </body>
