--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/bc92585769.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500&family=Knewave&family=Permanent+Marker&family=Saira+Extra+Condensed:wght@100;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500&family=Knewave&family=Permanent+Marker&family=Saira+Extra+Condensed:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Weather app</title>
@@ -20,16 +21,12 @@
             Todays Forcast 
             <i class="fas fa-cloud-sun-rain"></i>
         </h1>
-        <h2>
-            Phoenix
-        </h2>
+        <h2 id="city"> Phoenix </h2>
         <ul>
             <li>
                 Friday 05:00
             </li>
-            <li>
-                Clear
-            </li>
+            <li id="description"> </li>
         </ul>
         </div>
         <div class="row">
@@ -40,7 +37,8 @@
                     class="float-left"
                     />
                     <div class="float-left">
-                       <strong> 90 </strong><span class="units">°F | °C
+                       <strong id="temperature"> 90 </strong>
+                       <span class="units">°F | °C
                        </span>  
                 </div>
              </div>
